# minecraft-voxel-flow

./: .gitignore  BLUEMAP_ATTEMPTS_REPORT.md  BLUEMAP_STATUS.md  CHEATSHEET.md  CLOUDFLARE_BYPASS.md  CLOUDFLARE_FIX.md  GITHUB_SETUP.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SCRAPER_IMPROVEMENTS.md  SCRAPER_V2_IMPROVEMENTS.md  SUMMARY_FOR_PLAN.md  Schematic-to-Image-Pipeline-plan  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_rendering.txt  tasks.py
config/: core.conf
data/: README.md
docs/: ANGLE_BUG_POSTMORTEM.md  BLUEMAP_SCREENSHOTS.md  BLUEMAP_VS_MATPLOTLIB.md  CAMERA_ANGLE_SYSTEM.md  CHUNKY_RENDERING_ISSUE.md  CHUNKY_RENDERING_SETUP.md  SCHEMATIC_LOADING_PLAN.md  SCREENSHOT_GENERATION.md  mkdocs.yaml
notebooks/: bluemap_screenshots.ipynb  missing_from_scraped.txt  schematic_loader.ipynb  scrape.ipynb  scrape_planet_minecraft.ipynb  test_loader_classes.ipynb  train.ipynb
scripts/: ADVANCED_FILTERS.md  README.md  README_planet_minecraft.md  amulet_schematic_to_world.py  bluemap_reality_check.sh  bluemap_screenshot_demo.py  bluemap_screenshots.py  compare_schematics.py  create_test_world.py  download_bluemap.py  fix_file_locations.sh  generate_previews.py  paste_schematic_to_real_world.py  render_pipeline.py  render_schematics.py  run_scraper.py  run_scraper_stealth.py  schematic_to_world.py  scrape_planet_minecraft.py  setup.sh  setup_chunky_pipeline.sh  test_bluemap.py  test_bluemap_screenshot.py  test_properly_framed.py  test_render_pipeline.py  test_scraper.py  test_ultra_close.py  test_void_centered.py  test_void_closeup.py  (+3 more)
(+88 files in other folders)
