[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "minecraft_voxel_flow"
version = "0.0.1"
description = "Flow Matching for Minecraft voxel structure generation"
authors = [
  { name = "Moust Holmes", email = "your.email@example.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "flow matching", "generative models"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "N", "E", "W"]
ignore = ["N812", "N813"]  # Ignore rules about import casing conventions

[tool.coverage.run]
omit = ["tests/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--strict-markers",
    "--doctest-modules",
    "--color=yes",
    "--import-mode=importlib",
]
pythonpath = ["src"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
